
package com.grupod.docintelia.model;

/**
 *Roles posibles de los usuarios en Docintelia.
 */
public enum Roles {
    ADMINISTRADOR,
    BIBLIOTECARIO,
    USUARIO_REGISTRADO
}
